--- a/battle.html
+++ b/battle.html
@@ -2038,8 +2038,6 @@ function showCardActions(side, idx){
   
     if(!attacker || !target) return;
   
-    attacker.used = true;
-  
   // Set cooldown
     if(attack.effect && ['stun', 'sleep', 'poison'].includes(attack.effect)) {
     attacker.attackCooldowns[attackIndex] = BASE_COOLDOWN;
@@ -2068,7 +2066,6 @@ function showCardActions(side, idx){
   
   // Apply damage at animation peak
     setTimeout(() => {
-        attacker.used = true; // ← MARK AS USED HERE INSTEAD
       if(finalDmg > 0) {
         createImpactEffect(targetSlotEl, pattern || 'straight');
         showDamagePopup(targetSlotEl, finalDmg, '#ff4444');
@@ -2103,9 +2100,10 @@ function showCardActions(side, idx){
   
   // Remove animation
   setTimeout(() => {
+    attackerCardEl.classList.add('used');
     attackerCardEl.classList.remove(animationClass);
   }, animTiming);
-    
+
     hideActionPanel();
   }
        function performMultiTargetAttack(attackerIdx, attackIndex, pattern) {
@@ -2169,8 +2167,8 @@ function showCardActions(side, idx){
   });
   
   setTimeout(() => {
-    attacker.used = true;
-    attackerCardEl.classList.remove(animationClass);
+    attackerCardEl.classList.add('used'); // Add this line
+  attackerCardEl.classList.remove(animationClass);
     checkBattleOver();
   }, 1000 + (validTargets.length * 250));
   
