--- a/battle.html
+++ b/battle.html
@@ -4196,6 +4196,7 @@ addTouchHoldListeners();
     max-width: 250px;
   }
 }
+</style>
 
 /* ========== GAME OVER SCREEN ========== */
 .game-over-overlay {
