--- a/battle.html
+++ b/battle.html
@@ -874,26 +874,33 @@ html,body{height:100%;margin:0;font-family:'Press Start 2P','DotGothic16',monosp
   
   /* Mobile action panel - bottom center */
   .card-action-panel {
-    background: rgba(0,0,0,0.95) !important;
-    border: 2px solid var(--accent) !important;
-    border-radius: 8px !important;
-    padding: 10px !important;
-    max-width: 280px !important;
-    width: 90% !important;
-    box-shadow: 0 4px 12px rgba(0,0,0,0.4) !important;
-    z-index: 1000 !important;
-  }
-  
-  .card-action-panel .btn {
-    background: #fff !important;
-    color: #000 !important;
-    border: 2px solid #000 !important;
-    padding: 8px 12px !important;
-    text-align: center !important;
-    font-size: 10px !important;
-    border-radius: 4px !important;
-    width: 100% !important;
-  }
+  position: fixed !important; /* Make sure it's fixed */
+  bottom: 190px !important; /* Position from bottom */
+  left: 50% !important;
+  transform: translateX(-50%) !important;
+  background: rgba(0,0,0,0.95) !important;
+  border: 2px solid var(--accent) !important;
+  border-radius: 8px !important;
+  padding: 10px !important;
+  max-width: 220px !important; /* Narrower panel */
+  width: auto !important;
+  box-shadow: 0 4px 12px rgba(0,0,0,0.4) !important;
+  z-index: 1000 !important;
+}
+
+.card-action-panel .btn {
+  background: #fff !important;
+  color: #000 !important;
+  border: 2px solid #000 !important;
+  padding: 8px 12px !important;
+  text-align: center !important;
+  font-size: 10px !important;
+  border-radius: 4px !important;
+  width: auto !important; /* Don't force full width */
+  min-width: 0 !important;
+  white-space: normal !important;
+  margin: 2px 0 !important;
+}
   
   /* Mobile status icons */
   .status-icon { 
@@ -911,10 +918,6 @@ html,body{height:100%;margin:0;font-family:'Press Start 2P','DotGothic16',monosp
   /* Adjust panels to not overlap mobile log */
   .turn-panel { 
     bottom: 180px !important;
-  }
-  
-  .card-action-panel { 
-    bottom: 190px !important;
   }
 }
 
