--- a/battle.html
+++ b/battle.html
@@ -382,9 +382,9 @@ html,body{height:100%;margin:0;font-family:'Press Start 2P','DotGothic16',monosp
 .attacking-forward{animation:attackForward 1000ms ease-in-out forwards; z-index: 1000;}
 @keyframes attackForward{
   0%{transform:translateY(0) scale(1) rotateZ(0deg)}
-  25%{transform:translateY(80px) scale(1.2) rotateZ(5deg)}
-  50%{transform:translateY(160px) scale(1.3) rotateZ(-3deg)}
-  75%{transform:translateY(200px) scale(1.1) rotateZ(2deg)}
+  25%{transform:translateY(-80px) scale(1.2) rotateZ(5deg)}
+  50%{transform:translateY(-160px) scale(1.3) rotateZ(-3deg)}
+  75%{transform:translateY(-200px) scale(1.1) rotateZ(2deg)}
   100%{transform:translateY(0) scale(1) rotateZ(0deg)}
 }
 
@@ -1862,15 +1862,15 @@ slot.card.attacks.forEach((attack, attackIndex) => {
     
     // Use symbol for status effect
     if(attack.effect) {
-      const symbols = {
-        'stun': '⚡',
-        'sleep': '💤',
-        'poison': '☠',
-        'weaken': '⬇️'
-      };
-       buttonText += ` ${symbols[attack.effect] || ''}`;
-      }
-      attackBtn.innerHTML = buttonText;
+    const symbols = {
+      'stun': 'S',
+      'sleep': 'Z',
+      'poison': 'P',
+      'weaken': 'W'
+    };
+    buttonText += ` [${symbols[attack.effect] || ''}]`;
+  }
+  attackBtn.innerHTML = buttonText;
     } else {
       // Desktop format - more detailed
       let buttonText = attack.name;
