--- a/battle.html
+++ b/battle.html
@@ -4345,7 +4345,7 @@ addTouchHoldListeners();
   background: linear-gradient(135deg, #555, var(--danger), #8b0000);
   background-clip: text;
   -webkit-background-clip: text;
-  text-shadow: 0 0 20px rgba(255, 68, 68, 0.7);
+text-shadow: 0 0 20px rgba(255, 68, 68, 0.7);
 }
 
 @keyframes gameOver-animation {
@@ -4410,6 +4410,7 @@ addTouchHoldListeners();
 .game-over-overlay.show {
   visibility: visible !important;
 }
+
 /* Fix for animations being cut off and game over text size */
 @media (max-width: 768px) {
   /* Only apply fixed positioning to actual animations, not structure elements */
@@ -4447,6 +4448,39 @@ addTouchHoldListeners();
     bottom: 0 !important;
     left: 0 !important;
     width: 100% !important;
+  }
+  
+  /* Fix for status icons being cut off */
+  /* Fix icon positioning */
+  .status-icon {
+    position: absolute !important;
+    top: -18px !important; /* Move further up to avoid clipping */
+    right: 8px !important;
+    z-index: 5001 !important; /* Very high z-index to ensure visibility */
+  }
+  
+  /* Make sure containers don't clip the icons */
+  .slot {
+    overflow: visible !important;
+    padding-top: 16px !important; /* Add padding at top to accommodate icons */
+  }
+  
+  /* Ensure parent containers also don't clip */
+  .slots, .area, .arena {
+    overflow: visible !important;
+    padding-top: 8px !important;
+  }
+  
+  /* Additional positioning for multiple status icons */
+  .status-icon:nth-child(2) { right: 32px !important; }
+  .status-icon:nth-child(3) { right: 56px !important; }
+  .status-icon:nth-child(4) { right: 80px !important; }
+}
+
+/* Even smaller text on very small screens */
+@media (max-width: 350px) {
+  .game-over-text {
+    font-size: 32px !important;
   }
 }
 
