--- a/battle.html
+++ b/battle.html
@@ -382,9 +382,9 @@ html,body{height:100%;margin:0;font-family:'Press Start 2P','DotGothic16',monosp
 .attacking-forward{animation:attackForward 1000ms ease-in-out forwards; z-index: 1000;}
 @keyframes attackForward{
   0%{transform:translateY(0) scale(1) rotateZ(0deg)}
-  25%{transform:translateY(80px) scale(1.2) rotateZ(5deg)}
-  50%{transform:translateY(160px) scale(1.3) rotateZ(-3deg)}
-  75%{transform:translateY(200px) scale(1.1) rotateZ(2deg)}
+  25%{transform:translateY(-80px) scale(1.2) rotateZ(5deg)}
+  50%{transform:translateY(-160px) scale(1.3) rotateZ(-3deg)}
+  75%{transform:translateY(-200px) scale(1.1) rotateZ(2deg)}
   100%{transform:translateY(0) scale(1) rotateZ(0deg)}
 }
 
@@ -1413,7 +1413,7 @@ function getAttackAnimation(attackerIdx, targetIdx, pattern, attackerSide) {
   // Swap "forward" and "backward" here to fix the direction
   const direction = attackerSide === 'player' ? 'backward' : 'forward';
 
-  switch(pattern) {
+    switch(pattern) {
     case 'diagonal':
       return `attacking-diagonal-${offset < 0 ? 'left' : 'right'}`;
     case 'knight':
@@ -1424,7 +1424,8 @@ function getAttackAnimation(attackerIdx, targetIdx, pattern, attackerSide) {
     case 'wide':
       return 'attacking-sweep';
     case 'pierce':
-      return 'attacking-pierce';
+      // For pierce attacks, use forward animation (upward) for player
+      return attackerSide === 'player' ? 'attacking-forward' : 'attacking-pierce';
     case 'straight':
     default:
       return `attacking-${direction}`;
